--- a/index.html
+++ b/index.html
@@ -5,13 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript HTML DOM and Events</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <div id="app">
-        <input type="text" id="todoInput" placeholder="Enter a task...">
-        <button id="addTask">Add Task</button>
-        <ul id="taskList"></ul>
+    <!-- added a little bootstrap for presentation. focus on JS DOM and Events -->
+    <div class="container p-5 my-5 shadow rounded">
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4 d-flex justify-content-center">
+                <div id="app">
+                    <h1 class="display-6"><span class="text-primary">Azure</span> DevOps Ticket</h1>
+                        <input type="text" id="todoInput" placeholder="Enter a task...">
+                        <button id="addTask" class="bg-primary text-white">Add Task</button>
+                    <ul id="taskList" class="mt-2 p-0 " ></ul>
+                </div>
+            </div>
+            <div class="col-4"></div>
+        </div>
+        
     </div>
     <script src="script.js"></script>
 </body>
 </html>
+
+
